cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_22988_positive7.json
{
  "Resources": {
    "UnsafeSecGroup03": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22
          }
        ],
        "GroupDescription": "Allow http and hadoop",
        "VpcId": "my-vpc",
        "SecurityGroupIngress": [
          {
            "FromPort": 80,
            "ToPort": 80,
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "tcp"
          },
          {
            "ToPort": 9000,
            "CidrIp": "10.0.0.1/0",
            "IpProtocol": "tcp",
            "FromPort": 9000
          }
        ]
      }
    },
    "EC2Instance03": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "SecurityGroups": [
          "UnsafeSecGroup03"
        ],
        "KeyName": "my-new-rsa-key",
        "ImageId": "ami-79fd7eee",
        "InstanceType": "t3.medium"
      }
    }
  },
  "AWSTemplateFormatVersion": "2010-09-09T00:00:00Z"
}
